--- a/PITemp/PITemp.vcxproj
+++ b/PITemp/PITemp.vcxproj
@@ -15,7 +15,7 @@
     <ProjectGuid>{E6918E77-9E5A-45B6-988B-390CC2E89BC7}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>PITemp</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <TargetFrameworkVersion>
     </TargetFrameworkVersion>
   </PropertyGroup>
@@ -50,13 +50,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(Configuration)\</OutDir>
-    <IntDir>$(Configuration)\build\</IntDir>
+    <OutDir>$(MSBuildProjectDirectory)\$(Configuration)\</OutDir>
+    <IntDir>$(MSBuildProjectDirectory)\$(Configuration)\build\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(Configuration)\</OutDir>
-    <IntDir>$(Configuration)\build\</IntDir>
+    <OutDir>$(MSBuildProjectDirectory)\$(Configuration)\</OutDir>
+    <IntDir>$(MSBuildProjectDirectory)\$(Configuration)\build\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -71,7 +71,8 @@
       <CallingConvention>Cdecl</CallingConvention>
       <CompileAsManaged>false</CompileAsManaged>
       <SupportJustMyCode>false</SupportJustMyCode>
-      <MinimalRebuild>true</MinimalRebuild>
+      <MinimalRebuild>
+      </MinimalRebuild>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -99,6 +100,7 @@
       <OmitFramePointers>true</OmitFramePointers>
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <MinimalRebuild />
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -113,7 +115,6 @@
   <ItemGroup>
     <ClInclude Include="ats.h" />
     <ClInclude Include="dllmain.h" />
-    <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
