--- a/PITempCS/PITempCS.csproj
+++ b/PITempCS/PITempCS.csproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <Compile Include="Ats.cs" />
     <Compile Include="Main.cs" />
+    <Compile Include="PILoad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
